--- a/client/package.json
+++ b/client/package.json
@@ -5,13 +5,14 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@material-ui/core": "^4.8.0",
     "@potion/element": "1.0.0-next.0",
     "@potion/layout": "1.0.0-next.0",
     "axios": "^0.19.0",
     "node-sass": "^4.12.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-router-dom": "^5.0.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.1"
   },
   "devDependencies": {
