--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.0",
     "node-sass": "^4.12.0",
     "react": "16.8.6",
+    "react-color": "^2.17.3",
     "react-dom": "16.8.6",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.1"
